examples/invalid_scl/type_error_bad_const.scl
input tuple(usize, &str)
rel result(a, a) :- tuple(a, 1)
